--- a/torcs/torcs/data/cars/models/car5-trb1/Makefile
+++ b/torcs/torcs/data/cars/models/car5-trb1/Makefile
@@ -21,7 +21,8 @@ DATADIR   = cars/$(CAR)
 
 DATA      = $(CAR).xml \
             $(CAR).rgb shadow.rgb tex-wheel.rgb driver.rgb \
-            $(shell find *.acc -maxdepth 0 -type f -print) \
+            $(shell find *.acc -maxdepth 0 -type f -print)  \
+        $(shell find *.png -maxdepth 0 -type f -print) \
 	    	readme.txt 
 
 data-cars-extra_PKGFILES	= $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
