--- a/torcs/torcs/data/cars/models/pw-corollawrc/Makefile
+++ b/torcs/torcs/data/cars/models/pw-corollawrc/Makefile
@@ -22,7 +22,8 @@ DATADIR   = cars/pw-corollawrc
 DATA      = $(shell find *.xml -maxdepth 0 -type f -print) \
 	    $(shell find *.rgb -maxdepth 0 -type f -print) \
 	    $(shell find *.acc -maxdepth 0 -type f -print)  \
-	    $(shell find *.txt -maxdepth 0 -type f -print)
+	    $(shell find *.txt -maxdepth 0 -type f -print) \
+        $(shell find *.png -maxdepth 0 -type f -print)
 
 data-cars-Patwo-Design_PKGFILES	= $(DATA)
 
