--- a/torcs/torcs/data/cars/models/sc-f1/Makefile
+++ b/torcs/torcs/data/cars/models/sc-f1/Makefile
@@ -21,7 +21,8 @@ DATADIR   = cars/$(CAR)
 
 DATA      = $(CAR).xml readme.txt \
             $(CAR).rgb shadow.rgb wheel3d.png \
-            $(shell find *.acc -maxdepth 0 -type f -print)
+            $(shell find *.acc -maxdepth 0 -type f -print) \
+        $(shell find *.png -maxdepth 0 -type f -print)
 
 data-cars-extra_PKGFILES	= $(DATA)
 
