--- a/torcs/torcs/data/cars/models/155-DTM/Makefile
+++ b/torcs/torcs/data/cars/models/155-DTM/Makefile
@@ -21,7 +21,8 @@ DATADIR   = cars/155-DTM
 
 DATA      = $(CAR).xml readme.txt \
             $(CAR).rgb tex-wheel.rgb shadow.rgb \
-	    $(shell find *.acc -maxdepth 0 -type f -print)
+	    $(shell find *.acc -maxdepth 0 -type f -print) \
+        $(shell find *.png -maxdepth 0 -type f -print)
 
 data-cars-extra_PKGFILES	= $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
 
