--- a/torcs/torcs/data/cars/models/car1-trb3/Makefile
+++ b/torcs/torcs/data/cars/models/car1-trb3/Makefile
@@ -22,7 +22,8 @@ DATADIR   = cars/car1-trb3
 
 DATA      = $(CAR).xml  readme.txt \
             $(CAR).rgb tex-wheel.rgb shadow.rgb \
-            $(shell find *.acc -maxdepth 0 -type f -print)
+            $(shell find *.acc -maxdepth 0 -type f -print) \
+        $(shell find *.png -maxdepth 0 -type f -print)
 
 data_PKGFILES	= $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
 
