--- a/torcs/torcs/data/cars/models/kc-corvette-ttop/Makefile
+++ b/torcs/torcs/data/cars/models/kc-corvette-ttop/Makefile
@@ -24,7 +24,8 @@ DATA      = $(shell find * -maxdepth 0 -type f -print)
 DATA_PKG  = 	$(shell find *.acc -maxdepth 0 -type f -print) \
 		$(shell find *.rgb -maxdepth 0 -type f -print) \
 		$(shell find *.xml -maxdepth 0 -type f -print) \
-		$(shell find *.txt -maxdepth 0 -type f -print)
+		$(shell find *.txt -maxdepth 0 -type f -print) \
+        $(shell find *.png -maxdepth 0 -type f -print)
 
 data-cars-kcendra-gt_PKGFILES	= $(DATA_PKG) $(shell find *.xcf -maxdepth 0 -type f -print)
 
