--- a/torcs/torcs/data/cars/models/vm-x4/Makefile
+++ b/torcs/torcs/data/cars/models/vm-x4/Makefile
@@ -22,7 +22,8 @@ DATADIR   = cars/$(CAR)
 DATA      = $(shell find *.txt -maxdepth 0 -type f -print) \
             $(shell find *.xml -maxdepth 0 -type f -print) \
             $(shell find *.rgb -maxdepth 0 -type f -print) \
-            $(shell find *.acc -maxdepth 0 -type f -print)
+            $(shell find *.acc -maxdepth 0 -type f -print) \
+        $(shell find *.png -maxdepth 0 -type f -print)
 
 data-cars-VM_PKGFILES	= $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
 
