Adopted berniw to new/removed cars.

--- a/torcs/torcs/src/drivers/berniw2/7/Makefile
+++ b/torcs/torcs/src/drivers/berniw2/7/Makefile
@@ -20,15 +20,13 @@ ROBOT = berniw2
 
 SHIPDIR   = drivers/${ROBOT}/7
 
-SHIP      = porsche-gt3rs.rgb $(shell find *.xml -maxdepth 0 -type f -print)
+SHIP      = car5-trb1.rgb $(shell find *.xml -maxdepth 0 -type f -print)
 
 src-robots-berniw_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
 src-robots-berniw_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
-
-
 
 
 
