--- a/torcs/torcs/src/drivers/berniw2/Makefile
+++ b/torcs/torcs/src/drivers/berniw2/Makefile
@@ -8,7 +8,7 @@ SOURCES   = ${ROBOT}.cpp spline.cpp trackdesc.cpp pathfinder.cpp mycar.cpp
 
 SHIPDIR   = drivers/${ROBOT}
 
-SHIP      = ${ROBOT}.xml logo.rgb parameter.dat intsinsqr.dat intcossqr.dat
+SHIP      = ${ROBOT}.xml logo.rgb
 
 SHIPSUBDIRS = 1 2 3 4 5 6 7 8 9 10
 
