--- a/torcs/torcs/src/drivers/damned/0/Makefile
+++ b/torcs/torcs/src/drivers/damned/0/Makefile
@@ -2,9 +2,7 @@
 #
 #    file                 : Makefile
 #    created              : Wed Jan 8 18:31:16 CET 2003
-#    copyright            : (C) 2002-2004 Bernhard Wymann
-#    email                : berniw@bluewin.ch
-#    version              : $Id$
+#    copyright            : (C) 2002 Bernhard Wymann
 #
 ##############################################################################
 #
@@ -16,16 +14,13 @@
 ##############################################################################
 
 ROBOT       = damned
-MODULE      = ${ROBOT}.so
-MODULEDIR   = drivers/${ROBOT}
-SOURCES     = ${ROBOT}.cpp driver.cpp opponent.cpp spline.cpp pit.cpp learn.cpp strategy.cpp cardata.cpp
-
-SHIPDIR     = drivers/${ROBOT}
-SHIP        = ${ROBOT}.xml logo.rgb
-SHIPSUBDIRS = 0 1 2 3 4 5 6 7 8 9
+SHIPDIR     = drivers/${ROBOT}/0
+SHIP        = default.xml
+SHIPSUBDIRS =
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
 src-robots-base_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
 src-robots-base_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
-
 include ${MAKE_DEFAULT}
+
+
