Adopted olethros to new/reparametrized/removed cars.

--- a/torcs/torcs/src/drivers/olethros/1/Makefile
+++ b/torcs/torcs/src/drivers/olethros/1/Makefile
@@ -16,7 +16,7 @@
 ROBOT       = olethros
 SHIPDIR     = drivers/${ROBOT}/1
 SHIP        = default.xml cg-nascar-rwd.rgb
-SHIPSUBDIRS = practice qualifying race
+SHIPSUBDIRS =
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
 src-robots-olethros_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
