Adopted olethros to new/reparametrized/removed cars.

--- a/torcs/torcs/src/drivers/olethros/1/Makefile
+++ b/torcs/torcs/src/drivers/olethros/1/Makefile
@@ -15,7 +15,7 @@
 
 ROBOT       = olethros
 SHIPDIR     = drivers/${ROBOT}/1
-SHIP        = default.xml cg-nascar-rwd.rgb
+SHIP        = default.xml
 SHIPSUBDIRS =
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
