--- a/torcs/torcs/src/drivers/olethros/5/Makefile
+++ b/torcs/torcs/src/drivers/olethros/5/Makefile
@@ -15,7 +15,7 @@
 
 ROBOT       = olethros
 SHIPDIR     = drivers/${ROBOT}/5
-SHIP        = default.xml porsche-gt3rs.rgb
+SHIP        = default.xml
 SHIPSUBDIRS = 
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
