--- a/torcs/torcs/src/drivers/bt/6/Makefile
+++ b/torcs/torcs/src/drivers/bt/6/Makefile
@@ -15,7 +15,7 @@
 
 ROBOT       = bt
 SHIPDIR     = drivers/${ROBOT}/6
-SHIP        = default.xml
+SHIP        = car5-trb1.rgb default.xml
 SHIPSUBDIRS = 
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
