--- a/torcs/torcs/src/drivers/bt/4/Makefile
+++ b/torcs/torcs/src/drivers/bt/4/Makefile
@@ -15,7 +15,7 @@
 
 ROBOT       = bt
 SHIPDIR     = drivers/${ROBOT}/4
-SHIP        = default.xml
+SHIP        = car3-trb1.rgb default.xml
 SHIPSUBDIRS = 
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
