--- a/torcs/torcs/src/drivers/bt/7/Makefile
+++ b/torcs/torcs/src/drivers/bt/7/Makefile
@@ -15,7 +15,7 @@
 
 ROBOT       = bt
 SHIPDIR     = drivers/${ROBOT}/7
-SHIP        = default.xml
+SHIP        = car6-trb1.rgb default.xml
 SHIPSUBDIRS = 
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
