--- a/torcs/torcs/src/drivers/damned/7/Makefile
+++ b/torcs/torcs/src/drivers/damned/7/Makefile
@@ -15,7 +15,7 @@
 
 ROBOT       = damned
 SHIPDIR     = drivers/${ROBOT}/7
-SHIP        = default.xml
+SHIP        = car6-trb1.rgb default.xml
 SHIPSUBDIRS = 
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
