--- a/torcs/torcs/src/drivers/berniw/2/Makefile
+++ b/torcs/torcs/src/drivers/berniw/2/Makefile
@@ -22,9 +22,9 @@ SHIPDIR   = drivers/${ROBOT}/2
 
 SHIP      = cg-nascar-rwd.rgb $(shell find *.xml -maxdepth 0 -type f -print)
 
-src-robots-berniw_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+src-robots-base_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
-src-robots-berniw_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-base_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
