--- a/torcs/torcs/src/drivers/bt/Makefile
+++ b/torcs/torcs/src/drivers/bt/Makefile
@@ -25,7 +25,7 @@ SHIP        = ${ROBOT}.xml logo.rgb
 SHIPSUBDIRS = 0 1 2 3 4 5 6 7 8 9
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
-src-robots-bt_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
-src-robots-bt_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-base_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
+src-robots-base_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
