--- a/torcs/torcs/data/cars/models/cg-nascar-rwd/Makefile
+++ b/torcs/torcs/data/cars/models/cg-nascar-rwd/Makefile
@@ -23,9 +23,9 @@ DATA      = $(CAR).xml readme.txt \
             $(CAR).rgb tex-wheel.rgb shadow.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-nascar_PKGFILES = $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
+data-cars-extra_PKGFILES = $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
 
-data-cars-nascar_PKGDIR	= $(DATADIR)
+data-cars-extra_PKGDIR	= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
