--- a/torcs/torcs/data/cars/models/p406/Makefile
+++ b/torcs/torcs/data/cars/models/p406/Makefile
@@ -22,9 +22,9 @@ DATA      = 	$(shell find *.xml -maxdepth 0 -type f -print) \
 		$(shell find *.acc -maxdepth 0 -type f -print) \
 		$(shell find *.rgb -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
+data_PKGFILES	= $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGDIR		= $(DATADIR)
+data_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
