--- a/torcs/torcs/src/drivers/bt/0/qualifying/Makefile
+++ b/torcs/torcs/src/drivers/bt/0/qualifying/Makefile
@@ -17,7 +17,7 @@ ROBOT       = bt
 SHIPDIR     = drivers/${ROBOT}/0/qualifying
 SHIP        = $(shell find *.xml -maxdepth 0 -type f -print)
 
-src-robots-bt_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
-src-robots-bt_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-base_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
+src-robots-base_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 include ${MAKE_DEFAULT}
 
