--- a/torcs/torcs/src/drivers/olethros/7/Makefile
+++ b/torcs/torcs/src/drivers/olethros/7/Makefile
@@ -19,8 +19,8 @@ SHIP        = car6-trb1.rgb default.xml
 SHIPSUBDIRS = 
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
-src-robots-olethros_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
-src-robots-olethros_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-base_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
+src-robots-base_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 include ${MAKE_DEFAULT}
 
 
