--- a/torcs/torcs/src/drivers/olethros/8/Makefile
+++ b/torcs/torcs/src/drivers/olethros/8/Makefile
@@ -20,8 +20,8 @@ SHIPSUBDIRS =
 #practice qualifying race
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
-src-robots-olethros_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
-src-robots-olethros_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-base_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
+src-robots-base_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 include ${MAKE_DEFAULT}
 
 
