--- a/torcs/torcs/src/drivers/sparkle/0/Makefile
+++ b/torcs/torcs/src/drivers/sparkle/0/Makefile
@@ -21,8 +21,8 @@ SHIP        = baja-bug.rgb default.xml
 SHIPSUBDIRS =
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
-src-robots-berniw_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
-src-robots-berniw_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-base_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
+src-robots-base_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 include ${MAKE_DEFAULT}
 
 
