--- a/torcs/torcs/src/drivers/sparkle/Makefile
+++ b/torcs/torcs/src/drivers/sparkle/Makefile
@@ -25,7 +25,7 @@ SHIP        = ${ROBOT}.xml logo.rgb
 SHIPSUBDIRS = $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
-src-robots-berniw_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
-src-robots-berniw_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-base_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
+src-robots-base_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
