Replaced problematic f* with ow1, moved car sc-f* to car1-ow1

--- a/torcs/torcs/data/cars/models/car1-ow1/Makefile
+++ b/torcs/torcs/data/cars/models/car1-ow1/Makefile
@@ -15,12 +15,12 @@
 #
 ##############################################################################
 
-CAR       = sc-f1
+CAR       = car1-ow1
 
 DATADIR   = cars/$(CAR)
 
 DATA      = $(CAR).xml readme.txt \
-            $(CAR).rgb tex-wheel.rgb shadow.rgb \
+            $(CAR).rgb shadow.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
 data_PKGFILES	= $(DATA)
