--- a/torcs/torcs/src/linux/Makefile
+++ b/torcs/torcs/src/linux/Makefile
@@ -34,6 +34,7 @@ SOLIBS  =  -lracescreens  \
 	   -ltxml	  \
 	   -lplibul	  \
 	   -lraceengine   \
+	   -lmusicplayer  \
 	   -llearning
 
 EXPDIR  = include
