--- a/torcs/torcs/src/drivers/inferno/inferno.vcproj
+++ b/torcs/torcs/src/drivers/inferno/inferno.vcproj
@@ -77,7 +77,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="tgf.lib robottools.lib sg.lib ul.lib"
+				AdditionalDependencies="tgf.lib robottools.lib sg_vs2008_32.lib ul_vs2008_32.lib"
 				OutputFile=".\Debug/inferno.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -184,7 +184,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="tgf.lib robottools.lib sg.lib ul.lib"
+				AdditionalDependencies="tgf.lib robottools.lib sg_vs2008_32.lib ul_vs2008_32.lib"
 				OutputFile=".\Release/inferno.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
