--- a/torcs/torcs/src/drivers/inferno2/inferno2.vcproj
+++ b/torcs/torcs/src/drivers/inferno2/inferno2.vcproj
@@ -78,7 +78,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="robottools.lib tgf.lib sg.lib ul.lib"
+				AdditionalDependencies="robottools.lib tgf.lib sg_vs2008_32.lib ul_vs2008_32.lib"
 				OutputFile=".\Release/inferno2.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -182,7 +182,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="robottools.lib tgf.lib sg.lib ul.lib"
+				AdditionalDependencies="robottools.lib tgf.lib sg_vs2008_32.lib ul_vs2008_32.lib"
 				OutputFile=".\Debug/inferno2.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
