--- a/torcs/torcs/src/modules/simu/simuv2/simuv2.vcproj
+++ b/torcs/torcs/src/modules/simu/simuv2/simuv2.vcproj
@@ -77,7 +77,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="solid.lib tgf.lib robottools.lib sg.lib ul.lib"
+				AdditionalDependencies="solid.lib tgf.lib robottools.lib sg_vs2008_32.lib ul_vs2008_32.lib"
 				OutputFile=".\Debug/simuv2.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -184,7 +184,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="solid.lib tgf.lib robottools.lib sg.lib ul.lib odbc32.lib odbccp32.lib"
+				AdditionalDependencies="solid.lib tgf.lib robottools.lib sg_vs2008_32.lib ul_vs2008_32.lib odbc32.lib odbccp32.lib"
 				OutputFile=".\Release/simuv2.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
