--- a/torcs/torcs/src/modules/track/track.vcproj
+++ b/torcs/torcs/src/modules/track/track.vcproj
@@ -78,7 +78,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="tgf.lib robottools.lib txml.lib ssg.lib ul.lib sg.lib"
+				AdditionalDependencies="tgf.lib robottools.lib txml.lib ssg_vs2008_32.lib ul_vs2008_32.lib sg_vs2008_32.lib"
 				OutputFile=".\Debug/track.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -185,7 +185,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="sg.lib tgf.lib robottools.lib txml.lib ssg.lib ul.lib"
+				AdditionalDependencies="sg_vs2008_32.lib tgf.lib robottools.lib txml.lib ssg_vs2008_32.lib ul_vs2008_32.lib"
 				OutputFile=".\Release/track.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
