--- a/torcs/torcs/src/drivers/lliaw/lliaw.vcproj
+++ b/torcs/torcs/src/drivers/lliaw/lliaw.vcproj
@@ -78,7 +78,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="tgf.lib robottools.lib sg.lib ul.lib"
+				AdditionalDependencies="tgf.lib robottools.lib sg_vs2008_32.lib ul_vs2008_32.lib"
 				OutputFile=".\Release/lliaw.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -182,7 +182,7 @@
 				Name="VCLinkerTool"
 				IgnoreImportLibrary="true"
 				LinkLibraryDependencies="false"
-				AdditionalDependencies="tgf.lib robottools.lib sg.lib ul.lib"
+				AdditionalDependencies="tgf.lib robottools.lib sg_vs2008_32.lib ul_vs2008_32.lib"
 				OutputFile=".\Debug/lliaw.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
