--- a/torcs/torcs/src/libs/confscreens/Makefile
+++ b/torcs/torcs/src/libs/confscreens/Makefile
@@ -28,6 +28,8 @@ EXPDIR    = include
 EXPORTS   = confscreens.h driverconfig.h joystickconfig.h mouseconfig.h controlconfig.h graphconfig.h\
 			simuconfig.h soundconfig.h openglconfig.h
 
+LIBS      = -lplibjs
+
 src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
 src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
