--- a/torcs/torcs/src/libs/tgfclient/Makefile
+++ b/torcs/torcs/src/libs/tgfclient/Makefile
@@ -51,6 +51,8 @@ CONFIGCREATEDIRS = config
 
 CONFIG    = screen.xml
 
+LIBS      = -lplibjs
+
 src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
 src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
