Fixed parallel builds for Makefiles (e.g. MAKE="make -j 4" make)

--- a/torcs/torcs/src/modules/simu/simuv2/Makefile
+++ b/torcs/torcs/src/modules/simu/simuv2/Makefile
@@ -39,6 +39,9 @@ LIBS		=  -lplibsg -lplibul -L${EXPORTBASE}/lib -lsolid
 
 SUBDIRS		= SOLID-2.0
 
+# Because libsolid is a static library it must be built before simuv2, therefore the explicit dependency on subdirs
+$(MODULE): subdirs
+
 EXPINCDIRS	= SOLID-2.0
 
 PKGSUBDIRS	= $(SUBDIRS)
