Adopted Windows port to changes

--- a/torcs/torcs/src/tools/accc/accc.vcproj
+++ b/torcs/torcs/src/tools/accc/accc.vcproj
@@ -45,6 +45,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="../../../export/include;../../.."
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;DEBUG;DEBUG_OUT"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -143,6 +144,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
+				AdditionalIncludeDirectories="../../../export/include;../../.."
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				StringPooling="true"
 				RuntimeLibrary="0"
