--- a/torcs/torcs/src/drivers/berniw/berniw.vcproj
+++ b/torcs/torcs/src/drivers/berniw/berniw.vcproj
@@ -50,7 +50,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../export/include,../../windows/include"
+				AdditionalIncludeDirectories="../../../export/include;../../windows/include;../../.."
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;BERNIW_EXPORTS;DEBUG;DEBUG_OUT"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -157,7 +157,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="../../../export/include,../../windows/include"
+				AdditionalIncludeDirectories="../../../export/include;../../windows/include;../../.."
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;BERNIW_EXPORTS"
 				StringPooling="true"
 				RuntimeLibrary="0"
