--- a/torcs/torcs/src/modules/simu/simuv2/simuv2.vcproj
+++ b/torcs/torcs/src/modules/simu/simuv2/simuv2.vcproj
@@ -49,7 +49,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../../export/include,../../../windows/include"
+				AdditionalIncludeDirectories="../../../../export/include;../../../windows/include;../../../.."
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;SIMUV2_EXPORTS;DEBUG;DEBUG_OUT"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
@@ -156,7 +156,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="../../../../export/include,../../../windows/include"
+				AdditionalIncludeDirectories="../../../../export/include;../../../windows/include;../../../.."
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;SIMUV2_EXPORTS"
 				StringPooling="true"
 				RuntimeLibrary="0"
