--- a/torcs/torcs/src/tools/trackgen/trackgen.vcproj
+++ b/torcs/torcs/src/tools/trackgen/trackgen.vcproj
@@ -50,7 +50,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="../../../export/include,../../windows/include"
+				AdditionalIncludeDirectories="../../../export/include;../../windows/include;../../.."
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -148,7 +148,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../../export/include,../../windows/include"
+				AdditionalIncludeDirectories="../../../export/include;../../windows/include;../../.."
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="1"
