Fixed wrong package

--- a/torcs/torcs/data/cars/models/car1-stock1/Makefile
+++ b/torcs/torcs/data/cars/models/car1-stock1/Makefile
@@ -23,9 +23,9 @@ DATA      = $(CAR).xml readme.txt \
             $(CAR).rgb tex-wheel.rgb shadow.rgb driver.rgb carbon-128.rgb grill.rgb\
             $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-nascar_PKGFILES = $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
+data_PKGFILES	= $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
 
-data-cars-nascar_PKGDIR	= $(DATADIR)
+data_PKGDIR	= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
