--- a/torcs/torcs/src/linux/torcs.in
+++ b/torcs/torcs/src/linux/torcs.in
@@ -64,6 +64,10 @@ bt
 EOF
 	    ;;
 
+	-g) shift
+	    valgrind --leak-check=yes --log-file=$LOCAL_CONF/valgrind.log $LIBDIR/torcs-bin -l $LOCAL_CONF -L $LIBDIR -D $DATADIR $*
+	    ;;
+
 	-e) shift
 	    echo "cd $DATADIR"
 	    echo "export LD_LIBRARY_PATH=$LIBDIR/lib:$LD_LIBRARY_PATH"
@@ -72,10 +76,13 @@ EOF
 	    ;;
 
 	-h)
-	    echo "usage: torcs [-l|-d|-e]"
+	    echo "usage: torcs [-l|-d|-g|-e] [-s] [-r]"
 	    echo "   -l  list the dynamically linked libraries"
 	    echo "   -d  run under gdb and print stack trace on exit"
+		echo "   -g  run under valgrind (requires a debug build for useful results)"
 	    echo "   -e  display the commands to issue when you want to run under gdb"
+		echo "   -s  disable multitexturing, important for older graphics cards"
+		echo "   -r  run race in command line mode, see FAQ for details"
 	    ;;
 
 	# Normal run
